CHORE: Fix docs and http codes
