# docs/openapi.json
@@ -2,9 +2,23 @@
   "openapi": "3.0.0",
   "info": {
     "title": "Tunnel Management API",
-    "description": "API for managing tunnels",
+    "description": "API for managing the tunnel server.",
     "version": "1.0."
   },
+"tags": [
+     {
+      "name": "Tunnel Managememt",
+      "description": "Manage all the tunnel entries"
+       },
+      {
+      "name": "State Management",
+       "description": "Manage the running state of the tunnels"
+    },
+{
+      "name": "Info",
+       "description": "Getting status from the server"
+    }
+    ],
   "components": {
     "securitySchemes": {
       "apiKey": {
@@ -32,15 +46,11 @@
       }
     }
   },
-  "security": [
-    {
-      "apiKey": []
-    }
-  ],
+  
   "paths": {
     "/": {
       "get": {
-        "security": [],
+        "tags": ["Info"],
         "summary": "Get info about the api",
         "responses": {
           "200": {
@@ -69,6 +79,7 @@
     },
     "/api/tunnels/list": {
       "get": {
+        "tags": ["Tunnel Managememt"],
         "security": [
           {
             "apiKey": []
@@ -111,6 +122,7 @@
     },
     "/api/tunnels/restart": {
       "post": {
+        "tags": ["State Management"],
         "summary": "Restart tunnels",
         "responses": {
           "200": {
@@ -137,6 +149,7 @@
     },
     "/api/tunnels/start": {
       "post": {
+        "tags": ["State Management"],
         "summary": "Start tunnels",
         "responses": {
           "200": {
@@ -163,6 +176,7 @@
     },
     "/api/tunnels/stop": {
       "post": {
+        "tags": ["State Management"],
         "summary": "Stop tunnels",
         "responses": {
           "200": {
@@ -189,6 +203,7 @@
     },
     "/api/tunnels/delete/{id}": {
       "post": {
+        "tags": ["Tunnel Managememt"],
         "summary": "Delete tunnel by ID",
         "parameters": [
           {
@@ -242,6 +257,7 @@
     },
     "/api/tunnels/edit/{id}": {
       "post": {
+        "tags": ["Tunnel Managememt"],
         "summary": "Edit tunnel",
         "parameters": [
           {
@@ -301,7 +317,7 @@
               }
             }
           },
-          "401": {
+          "400": {
             "description": "Edit failed (Tunnel Not Found)",
             "content": {
               "application/json": {
@@ -325,6 +341,7 @@
     },
     "/api/tunnels/create/{id}": {
       "post": {
+        "tags": ["Tunnel Managememt"],
         "summary": "Create tunnel",
         "parameters": [
           {
@@ -394,7 +411,7 @@
               }
             }
           },
-          "401": {
+          "400": {
             "description": "Invalid data (duplicate tunnel name)",
             "content": {
               "application/json": {
